--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   ],
   "author": "unickhow <unick.zhow@gmail.com>",
   "activationEvents": [],
+  "icon": "images/icon.png",
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
